flask-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-notes
  namespace: notes-app
  labels:
    app: flask-notes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-notes
  template:
    metadata:
      labels:
        app: flask-notes
    spec:
      containers:
      - name: flask-notes
        image: badex/flask-notes:v20250624010330
        ports:
        - containerPort: 5050
