flask-app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: notes-app
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  clusterIP: None  # for headless service to support StatefulSet
