flask-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-notes
  namespace: notes-app
spec:
  type: ClusterIP
  selector:
    app: flask-notes
  ports:
    - port: 80
      targetPort: 5050
      protocol: TCP
      name: http
