flask-app/flask-notes-gateway-vertical-service.yaml
# flask-notes-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: flask-notes-gateway
  namespace: notes-app
spec:
  selector:
    istio: ingressgateway  # selects istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
# flask-notes-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flask-notes
  namespace: notes-app
spec:
  hosts:
  - "*" 
  gateways:
  - flask-notes-gateway
  http:
  - match:
    - uri:
        prefix: /      
    route:
    - destination:
        host: flask-notes
        port:
          number: 5050
